ensure container fits content
this avoids that the portlets start overlapping when the screen width
becomes too small and the tables can't be shrinked any further

remove some wrong classes

--- a/src/main/resources/hudson/plugins/view/dashboard/portlet.css
+++ b/src/main/resources/hudson/plugins/view/dashboard/portlet.css
@@ -1,6 +1,7 @@
 .dbv-container {
   display: grid;
   gap: 5px 10px;
+  min-width: fit-content;
 }
 
 .dbv-container__top{
